--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
     <section id="projects" class="projects">
         <h2>Projetos</h2>
         <div class="grid">
-            <figure>
+            <!--<figure>
                 <img class="img-projects" src="./img/accounting.jpg" alt="Contabilidade">
                 <figcaption>Controladoria</figcaption>
                 <a href="./img/map.png" target="_blank"><p>Elaboração e análise de DRE, balancete, orçamento empresarial. Mapeamento de processos e parametrização fiscal-contábil de ERP.</p></a>
-            </figure>
+            </figure>-->
             <figure>
                 <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One"></a>
                 <figcaption>SAP Business One</figcaption>
-                <p>Gerente de implantação do SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p>
+                <p>Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p>
             </figure>
             <figure>
-                <a href="http://aka.ms/AA8fjrm" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI"></a>
-                <figcaption>Power BI e Excel</figcaption>
-                <p>Elaboração de Dashboards para análise visual de compras, estoque, despesas, vendas, margem de contribuição, lucro, entre outros.</p>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI"></a>
+                <figcaption>Power BI</figcaption>
+                <p>Dashboard analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p>
             </figure>
             <figure>
-                <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/training.jpg" alt="Treinamentos"></a>
-                <figcaption>Treinamentos</figcaption>
-                <p>Ministrei treinamentos internos sobre tributação, contabilidade e SAP.</p>
+                <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos"></a>
+                <figcaption>Treinamento ICMS</figcaption>
+                <p>Treinamento sobre os impactos no ICMS resultates da EC 87/2015.
+                </p>
             </figure>
         </div>
     </section>
@@ -61,9 +62,9 @@
                 <a href="https://github.com/monmaivan" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://twitter.com/MonmaIvan" target="_blank">
+                <!--<a href="https://twitter.com/MonmaIvan" target="_blank">
                     <i class="fab fa-twitter"></i>
-                </a>
+                </a>-->
                 <a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
@@ -72,6 +73,5 @@
                 </a>
             </div>
     </section>
-    <script src="darkmode.js"></script>
 </body>
 </html>
