Adição de projeto

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 <p>Treinamento sobre os impactos no ICMS resultates da EC 87/2015.
                 </p>
             </figure>
+            <figure>
+                <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos"></a>
+                <figcaption>Bizagi</figcaption>
+                <p>Mapeamento e desenvolvimento de processos.
+                </p>
+            </figure>
         </div>
     </section>
     <section id="contact" class="contact">
