--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
             </figure>
             <figure>
-                <a href="https://monmaivan.github.io/site/img/bizagisalesorder.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos"></a>
+                <a href="https://monmaivan.github.io/site/img/map.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos"></a>
                 <figcaption>Bizagi</figcaption>
                 <p>Mapeamento e desenvolvimento de processos.
                 </p>
