--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <figure>
                 <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos"></a>
                 <figcaption>Treinamento ICMS</figcaption>
-                <p>Treinamento sobre os impactos no ICMS resultates da EC 87/2015.
+                <p>Treinamento sobre os impactos na tributação do ICMS para equipe de Vendas após EC 87/2015.
                 </p>
             </figure>
             <figure>
                 <a href="https://monmaivan.github.io/site/img/map.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos"></a>
                 <figcaption>Bizagi</figcaption>
-                <p>Mapeamento e desenvolvimento de processos.
+                <p>Mapeamento e desenvolvimento de processo elaborado no Bizagi.
                 </p>
             </figure>
         </div>
