Adição "About" e melhorias gerais

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
             <div class="titles">
+                <figure class="avatar">
+                    <img src="./img/perfil.jpg" alt="Ivan Monma">
+                </figure>
                 <h1 class="site-title">Ivan Monma</h1>
                 <h2 class="site-subtitle1">Business Inteligence</h2>
                 <h2 class="site-subtitle2">Controllership</h2>
@@ -28,9 +31,29 @@
 
             <a class="down-arrow"href="#projects"><img id="img-down-arrow"src="./img/angle-down-solid.svg" alt="down-arrow"></a>
 
-        </header>
     </header>
-    <section id="projects" class="projects">
+    <section id="about" class="about container">
+        <h2>Sobre</h2>
+            <ul>
+                <li><i class="fas fa-map-marker-alt about-icon about-icon-map"></i>
+                <li>São Paulo</li>
+            </ul><br>
+            <ul>   
+                <li><i class="fas fa-graduation-cap about-icon about-icon-graduation"></i>
+                <li>Gestão Financeira (2017)</li>
+                <li>Ciências Contábeis (2022)</li>
+            </ul><br>
+            <ul>
+                <li><i class="fas fa-building about-icon about-icon-building"></i></li>
+                <li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
+                <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
+                <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
+                <li><a href="http://www.prodent.net.br/" target="_blank">Prodent (2009 - 2010)</a></li>
+                <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
+                <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
+            </ul>            
+    </section>
+    <section id="projects" class="projects container">
         <h2>Projetos</h2>
         <div class="grid">
             <!--<figure>
@@ -62,15 +85,24 @@
             </figure>
         </div>
     </section>
-    <section id="contact" class="contact">
+    <section id="contact" class="contact container">
         <h2>Contato</h2>
             <div class="grid icons">
+                <a href="tel:5511963663646" target="_blank">
+                    <i class="fas fa-mobile-alt"></i>
+                </a>
+                <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
                 <a href="https://github.com/monmaivan" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
                 <!--<a href="https://twitter.com/MonmaIvan" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>-->
+                <a href="https://join.skype.com/invite/rGpQhjXfeW8c" target="_blank">
+                    <i class="fab fa-skype"></i>
+                </a>
                 <a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
