Adição Projeto Dashboard Covid-19

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI"></a>
                 <figcaption>Power BI</figcaption>
-                <p>Dashboard analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p>
+                <p>Dashboard feito no Power BI, analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p>
+            </figure>
+            <figure>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard"></a>
+                <figcaption>Dashboard Covid-19</figcaption>
+                <p>Dashboard feito no Power BI, atualizado automaticamente com dados extraídos da web.</p>
             </figure>
             <figure>
                 <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos"></a>
