--- a/index.html
+++ b/index.html
@@ -6,115 +6,111 @@
     <title>Ivan Monma</title>
     <script src="https://kit.fontawesome.com/facf69529a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-
 <body>
+
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#projects">Projetos</a></li>
-                <li><a href="#contact">Contato</a></li>
+                <li><a href="#top">Top</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
-            <div class="titles">
-                <figure class="avatar">
-                    <img src="./img/perfil.jpg" alt="Ivan Monma">
-                </figure>
-                <h1 class="site-title">Ivan Monma</h1>
-                <h2 class="site-subtitle1">Business Inteligence</h2>
-                <h2 class="site-subtitle2">Controllership</h2>
-                <h2 class="site-subtitle3">Accounting</h2>
-                <h2 class="site-subtitle4">Tax</h2>
-            </div>
-
-            <a class="down-arrow"href="#projects"><img id="img-down-arrow"src="./img/angle-down-solid.svg" alt="down-arrow"></a>
-
+        <section id="Top" class="titles">
+            <h1>Ivan Monma</h1>
+            <h2>Business Inteligence</h2>
+            <h3>Controllership</h3>
+            <h4>Accounting</h4>
+            <h5>Tax</h5>
+        </section>
     </header>
-    <section id="about" class="about container">
-        <h2>Sobre</h2>
-            <ul>
-                <li><i class="fas fa-map-marker-alt about-icon about-icon-map"></i>
+
+    <section id="about" class="about">
+        <h2>About</h2>
+        <ul>
+            <li><i class="fas fa-map-marker-alt about-icon about-icon-map"></i>
                 <li>São Paulo</li>
-            </ul><br>
-            <ul>   
-                <li><i class="fas fa-graduation-cap about-icon about-icon-graduation"></i>
-                <li>Gestão Financeira (2017)</li>
-                <li>Ciências Contábeis (2022)</li>
-            </ul><br>
-            <ul>
-                <li><i class="fas fa-building about-icon about-icon-building"></i></li>
-                <li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
-                <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
-                <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
-                <li><a href="http://www.prodent.net.br/" target="_blank">Prodent (2009 - 2010)</a></li>
-                <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
-                <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
-            </ul>            
+        </ul>
+        <ul>   
+            <li><i class="fas fa-graduation-cap about-icon about-icon-graduation"></i>
+            <li>Gestão Financeira (2017)</li>
+            <li>Ciências Contábeis (2022)</li>
+        </ul>   
+        <ul>
+            <li><i class="fas fa-building about-icon about-icon-building"></i></li>
+            <li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
+            <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
+            <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
+            <li><a href="http://www.prodent.net.br/" target="_blank">Prodent (2009 - 2010)</a></li>
+            <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
+            <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
+        </ul>
     </section>
-    <section id="projects" class="projects container">
-        <h2>Projetos</h2>
+    <section id="projects" class="projects">
+        <h2>Projects</h2>
         <div class="grid">
-            <!--<figure>
-                <img class="img-projects" src="./img/accounting.jpg" alt="Contabilidade">
-                <figcaption>Controladoria</figcaption>
-                <a href="./img/map.png" target="_blank"><p>Elaboração e análise de DRE, balancete, orçamento empresarial. Mapeamento de processos e parametrização fiscal-contábil de ERP.</p></a>
-            </figure>-->
             <figure>
-                <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One"></a>
-                <figcaption>SAP Business One</figcaption>
-                <p>Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p>
+                <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
+                <figcaption class="link">SAP Business One</figcaption>
+                <p class="link">Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a></span>
             </figure>
             <figure>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI"></a>
-                <figcaption>Power BI</figcaption>
-                <p>Dashboard feito no Power BI, analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
+                <figcaption class="link">Dashboard variação Dólar</figcaption>
+                <p class="link">Dashboard feito no Power BI, analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
             </figure>
             <figure>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard"></a>
-                <figcaption>Dashboard Covid-19</figcaption>
-                <p>Dashboard feito no Power BI, atualizado automaticamente com dados extraídos da web.</p>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
+                <figcaption class="link">Dashboard Covid-19</figcaption>
+                <p class="link">Dashboard feito no Power BI, atualizado automaticamente com dados extraídos da web.</p></a>
             </figure>
             <figure>
-                <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos"></a>
-                <figcaption>Treinamento ICMS</figcaption>
-                <p>Treinamento sobre os impactos na tributação do ICMS para equipe de Vendas após EC 87/2015.
-                </p>
+                <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos">
+                <figcaption class="link">Treinamento ICMS</figcaption>
+                <p class="link">Treinamento sobre os impactos na tributação do ICMS para equipe de Vendas após EC 87/2015.
+                </p></a>
             </figure>
             <figure>
-                <a href="https://monmaivan.github.io/site/img/map.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos"></a>
-                <figcaption>Bizagi</figcaption>
-                <p>Mapeamento e desenvolvimento de processo elaborado no Bizagi.
-                </p>
+                <a href="https://monmaivan.github.io/site/img/map.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos">
+                <figcaption class="link">Bizagi</figcaption>
+                <p class="link">Mapeamento e desenvolvimento de processo elaborado no Bizagi.
+                </p></a>
             </figure>
         </div>
     </section>
-    <section id="contact" class="contact container">
-        <h2>Contato</h2>
-            <div class="grid icons">
-                <a href="tel:5511963663646" target="_blank">
-                    <i class="fas fa-mobile-alt"></i>
-                </a>
-                <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-                <a href="https://github.com/monmaivan" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-                <!--<a href="https://twitter.com/MonmaIvan" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>-->
-                <a href="https://join.skype.com/invite/rGpQhjXfeW8c" target="_blank">
-                    <i class="fab fa-skype"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="mailto:monma.ivan@outlook.com">
-                    <i class="fas fa-envelope"></i>
-                </a>
-            </div>
+    <section id="contact" class="contact">
+        <footer>
+            <nav class="footer">
+                <ul class="icons">
+                    <!--<li><a href="tel:5511963663646" target="_blank">
+                        <i class="fas fa-mobile-alt"></i>
+                        <span>+55 11 96366 3646</span>
+                    </a></li>-->
+                    <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>+55 11 96366 3646</span>
+                    </a></li>
+                    <li><a href="https://github.com/monmaivan" target="_blank">
+                        <i class="fab fa-github"></i>
+                        <span>https://github.com/monmaivan</span>
+                    </a></li>
+                    <li><a href="https://join.skype.com/invite/rGpQhjXfeW8c" target="_blank">
+                        <i class="fab fa-skype"></i>
+                        <span>live:monma.ivan</span>
+                    </a></li>
+                    <li><a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                        <span>https://www.linkedin.com/in/ivanmonma/</span>
+                    </a></li>
+                    <li><a href="mailto:monma.ivan@outlook.com">
+                        <i class="fas fa-envelope"></i>
+                        <span>monma.ivan@outlook.com</span>
+                    </a></li>
+                </ul>
+        </nav>
+        </footer>
     </section>
 </body>
 </html>
