Adição animações e atualização Contatos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#top">Top</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <section id="Top" class="titles">
@@ -25,21 +26,21 @@
             <h4>Accounting</h4>
             <h5>Tax</h5>
         </section>
+        <a class="down-arrow" href="#about"><i class="fas fa-chevron-down"></i></a>
     </header>
-
     <section id="about" class="about">
         <h2>About</h2>
         <ul>
-            <li><i class="fas fa-map-marker-alt about-icon about-icon-map"></i>
+            <li><i class="fas fa-map-marker-alt about-icon"></i>
                 <li>São Paulo</li>
         </ul>
         <ul>   
-            <li><i class="fas fa-graduation-cap about-icon about-icon-graduation"></i>
+            <li><i class="fas fa-graduation-cap about-icon"></i>
             <li>Gestão Financeira (2017)</li>
             <li>Ciências Contábeis (2022)</li>
         </ul>   
         <ul>
-            <li><i class="fas fa-building about-icon about-icon-building"></i></li>
+            <li><i class="fas fa-building about-icon"></i></li>
             <li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
             <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
             <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
@@ -47,6 +48,7 @@
             <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
             <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
         </ul>
+        <a class="down-arrow2" href="#projects"><i class="fas fa-chevron-down"></i></a>
     </section>
     <section id="projects" class="projects">
         <h2>Projects</h2>
@@ -54,7 +56,7 @@
             <figure>
                 <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
                 <figcaption class="link">SAP Business One</figcaption>
-                <p class="link">Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a></span>
+                <p class="link">Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a>
             </figure>
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
@@ -80,36 +82,43 @@
             </figure>
         </div>
     </section>
+
+    <a href="#top" class="topo-arrow"><i class="fas fa-chevron-up"></i></a>
+    
     <section id="contact" class="contact">
         <footer>
             <nav class="footer">
+                <h2>Contact</h2>
                 <ul class="icons">
-                    <!--<li><a href="tel:5511963663646" target="_blank">
+                    <li><a href="mailto:monma.ivan@outlook.com">
+                        <i class="fas fa-envelope"></i>
+                        <p>monma.ivan@outlook.com</p>
+                    </a></li>
+                    <li><a href="tel:5511963663646" target="_blank">
                         <i class="fas fa-mobile-alt"></i>
-                        <span>+55 11 96366 3646</span>
-                    </a></li>-->
+                        <p>+55 11 96366 3646</p>
+                    </a></li>
                     <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
                         <i class="fab fa-whatsapp"></i>
-                        <span>+55 11 96366 3646</span>
-                    </a></li>
-                    <li><a href="https://github.com/monmaivan" target="_blank">
-                        <i class="fab fa-github"></i>
-                        <span>https://github.com/monmaivan</span>
+                        <p>+55 11 96366 3646</p>
                     </a></li>
                     <li><a href="https://join.skype.com/invite/rGpQhjXfeW8c" target="_blank">
                         <i class="fab fa-skype"></i>
-                        <span>live:monma.ivan</span>
+                        <p>live:monma.ivan</p>
                     </a></li>
                     <li><a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
                         <i class="fab fa-linkedin"></i>
-                        <span>https://www.linkedin.com/in/ivanmonma/</span>
+                        <p>https://www.linkedin.com/in/ivanmonma/</p>
                     </a></li>
-                    <li><a href="mailto:monma.ivan@outlook.com">
-                        <i class="fas fa-envelope"></i>
-                        <span>monma.ivan@outlook.com</span>
+                    <li><a href="https://github.com/monmaivan" target="_blank">
+                        <i class="fab fa-github"></i>
+                        <p>https://github.com/monmaivan</p>
                     </a></li>
                 </ul>
         </nav>
+        <div>
+            Feito com <i class="fas fa-coffee"></i> e <i class="fas fa-heart"></i> por Ivan Monma
+        </div>
         </footer>
     </section>
 </body>
