Melhorias em "Contact"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#top">Top</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Let´s talk?</a></li>
             </ul>
         </nav>
         <section id="Top" class="titles">
@@ -83,12 +83,14 @@
         </div>
     </section>
 
-    <a href="#top" class="topo-arrow"><i class="fas fa-chevron-up"></i></a>
+    <a href="#top" class="topo-arrow"><i class="fas fa-chevron-up"></i></a><br>
+    <a class="down-arrow2" href="#contact"><i class="fas fa-chevron-down"></i></a>
+
     
     <section id="contact" class="contact">
         <footer>
             <nav class="footer">
-                <h2>Contact</h2>
+                <h2>Let's talk?</h2>
                 <ul class="icons">
                     <li><a href="mailto:monma.ivan@outlook.com">
                         <i class="fas fa-envelope"></i>
