--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </figure>
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
-                <figcaption class="link">Dashboard variação Dólar</figcaption>
+                <figcaption class="link">Dashboard Variação Dólar</figcaption>
                 <p class="link">Dashboard feito no Power BI, analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
             </figure>
             <figure>
@@ -110,11 +110,11 @@
                     </a></li>
                     <li><a href="https://www.linkedin.com/in/ivanmonma/" target="_blank">
                         <i class="fab fa-linkedin"></i>
-                        <p>https://www.linkedin.com/in/ivanmonma/</p>
+                        <p>linkedin.com/in/ivanmonma</p>
                     </a></li>
                     <li><a href="https://github.com/monmaivan" target="_blank">
                         <i class="fab fa-github"></i>
-                        <p>https://github.com/monmaivan</p>
+                        <p>github.com/monmaivan</p>
                     </a></li>
                 </ul>
         </nav>
