--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="#top">Top</a></li>
+                <li><a href="#top"><i class="fas fa-home"></i></a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Let´s talk?</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <section id="Top" class="titles">
@@ -48,36 +48,44 @@
             <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
             <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
         </ul>
+
+        <a href="#top" class="topo-arrow"><i class="fas fa-chevron-up"></i></a><br>
         <a class="down-arrow2" href="#projects"><i class="fas fa-chevron-down"></i></a>
+
     </section>
     <section id="projects" class="projects">
         <h2>Projects</h2>
         <div class="grid">
             <figure>
-                <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
-                <figcaption class="link">SAP Business One</figcaption>
-                <p class="link">Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a>
+                <a href="https://public.tableau.com/views/Covid19_15900350276550/Painel1?:display_count=y&publish=yes&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
+                <figcaption>Linha do Tempo COVID-19</figcaption>
+                <p>Dashboard feito no Tableau, com linha do tempo mostrando o crescimento dos números no mundo, segregado por país.</p></a>
+            </figure>
+            <figure>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
+            <figcaption>Números Totais Covid-19</figcaption>
+            <p>Dashboard feito no Power BI, com filtros interativos por Continente, segmentados por país, atualizado diariamente.</p></a>
             </figure>
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
-                <figcaption class="link">Dashboard Variação Dólar</figcaption>
-                <p class="link">Dashboard feito no Power BI, analisando variação do dólar, de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
+                <figcaption>Variação Dólar 2000 a 2018</figcaption>
+                <p>Dashboard feito no Power BI, gráficos interativos,analisando variação do dólar de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
             </figure>
             <figure>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
-                <figcaption class="link">Dashboard Covid-19</figcaption>
-                <p class="link">Dashboard feito no Power BI, atualizado automaticamente com dados extraídos da web.</p></a>
+                <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
+                <figcaption>SAP Business One</figcaption>
+                <p>Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a>
             </figure>
             <figure>
                 <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos">
-                <figcaption class="link">Treinamento ICMS</figcaption>
-                <p class="link">Treinamento sobre os impactos na tributação do ICMS para equipe de Vendas após EC 87/2015.
+                <figcaption>Treinamento ICMS</figcaption>
+                <p>Treinamento sobre os impactos na tributação do ICMS para equipe de Vendas após EC 87/2015.
                 </p></a>
             </figure>
             <figure>
                 <a href="https://monmaivan.github.io/site/img/map.png" target="_blank"><img class="img-projects" src="./img/bizagisalesorder.png" alt="Treinamentos">
-                <figcaption class="link">Bizagi</figcaption>
-                <p class="link">Mapeamento e desenvolvimento de processo elaborado no Bizagi.
+                <figcaption>Desenvolvimento de Processos</figcaption>
+                <p>Elaborado no Bizagi, mapeamento e desenvolvimento de um processo de venda, partindo do orçamento até a entrega.
                 </p></a>
             </figure>
         </div>
@@ -90,18 +98,18 @@
     <section id="contact" class="contact">
         <footer>
             <nav class="footer">
-                <h2>Let's talk?</h2>
+                <h2>Contact</h2>
                 <ul class="icons">
                     <li><a href="mailto:monma.ivan@outlook.com">
                         <i class="fas fa-envelope"></i>
                         <p>monma.ivan@outlook.com</p>
                     </a></li>
-                    <li><a href="tel:5511963663646" target="_blank">
-                        <i class="fas fa-mobile-alt"></i>
-                        <p>+55 11 96366 3646</p>
+                    <li><a href="https://t.me/monmaivan" target="_blank">
+                        <i class="fab fa-telegram"></i>
+                        <p>@monmaivan</p>
                     </a></li>
                     <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
-                        <i class="fab fa-whatsapp"></i>
+                        <i class="fab fa-whatsapp-square"></i>
                         <p>+55 11 96366 3646</p>
                     </a></li>
                     <li><a href="https://join.skype.com/invite/rGpQhjXfeW8c" target="_blank">
@@ -118,7 +126,7 @@
                     </a></li>
                 </ul>
         </nav>
-        <div>
+        <div><br>
             Feito com <i class="fas fa-coffee"></i> e <i class="fas fa-heart"></i> por Ivan Monma
         </div>
         </footer>
