Correção link Tableau

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Projects</h2>
         <div class="grid">
             <figure>
-                <a href="https://public.tableau.com/views/Covid19_15900350276550/Painel1?:display_count=y&publish=yes&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
+                <a href="https://public.tableau.com/views/Covid19_15900350276550/DashBoard?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
                 <figcaption>Linha do Tempo COVID-19</figcaption>
                 <p>Dashboard feito no Tableau, com linha do tempo mostrando o crescimento dos números no mundo, segregado por país.</p></a>
             </figure>
