--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ivan Monma</title>
     <script src="https://kit.fontawesome.com/facf69529a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/timeline.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,13 +42,53 @@
         </ul>   
         <ul>
             <li><i class="fas fa-building about-icon"></i></li>
-            <li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
+            <!--<li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
             <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
             <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
             <li><a href="http://www.prodent.net.br/" target="_blank">Prodent (2009 - 2010)</a></li>
             <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
-            <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>
+            <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>-->
         </ul>
+
+        
+            <div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <h3><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos</a></h3>
+      <p>2015 | Atual</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h3><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras</a></h3>
+      <p>2012 | 2014</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h3><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão)</a></h3>
+      <p>2010 | 2011</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h3><a href="http://www.prodent.net.br/" target="_blank">Prodent</a></h3>
+      <p>2009 | 2010</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h3><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados</a></h3>
+      <p>2008 | 2009</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h3><a href="https://usetaxi.com.br/">Use Táxi</a></h3>
+      <p>2005 | 2008</p>
+    </div>
+  </div>
+</div>
 
         <a href="#top" class="topo-arrow"><i class="fas fa-chevron-up"></i></a><br>
         <a class="down-arrow2" href="#projects"><i class="fas fa-chevron-down"></i></a>
@@ -59,12 +100,12 @@
             <figure>
                 <a href="https://public.tableau.com/views/Covid19_15900350276550/DashBoard?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
                 <figcaption>Linha do Tempo COVID-19</figcaption>
-                <p>Dashboard feito no Tableau, com linha do tempo mostrando o crescimento dos números no mundo, segregado por país.</p></a>
+                <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo, atualizado </p></a>
             </figure>
             <figure>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
             <figcaption>Números Totais Covid-19</figcaption>
-            <p>Dashboard feito no Power BI, com filtros interativos por Continente, segmentados por país, atualizado diariamente.</p></a>
+            <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente.</p></a>
             </figure>
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
