Inlusão de projeto "Formação Preço de Venda"

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                 <p>Dashboard feito no Power BI, gráficos interativos,analisando variação do dólar de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
             </figure>
             <figure>
+                <a href="https://1drv.ms/x/s!Arqmys7wWUqZi_VXMJwNg-pZIUE_0w?e=Q2JB0M" target="_blank"><img class="img-projects" src="./img/pricing.png" alt="Excel - Preço de Venda">
+                <figcaption>Formação Preço de Venda</figcaption>
+                <p>Planilha feita no Excel, para formação de preço de venda a partir do custo da mercadoria, considerando despesas fixas, variáveis e lucro.</p></a>
+            </figure>
+            <figure>
                 <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
                 <figcaption>SAP Business One</figcaption>
                 <p>Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a>
