Correção descrição Projeto Tableau

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <figure>
                 <a href="https://public.tableau.com/views/Covid19_15900350276550/DashBoard?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
                 <figcaption>Linha do Tempo COVID-19</figcaption>
-                <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo, atualizado </p></a>
+                <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo. </p></a>
             </figure>
             <figure>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
