Correção descrição projetos

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <figure>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
             <figcaption>Números Totais Covid-19</figcaption>
-            <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos se informar.</p></a>
+            <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos para se informar.</p></a>
             </figure>
             <figure>
                 <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos">
