--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
   <div class="container right">
     <div class="content">
-      <h3><a href="https://usetaxi.com.br/">Use Táxi</a></h3>
+      <h3><a href="https://usetaxi.com.br/" target="_blank">Use Táxi</a></h3>
       <p>2005 | 2008</p>
     </div>
   </div>
