Inclusão de projeto "Painel Gerencial"

--- a/index.html
+++ b/index.html
@@ -102,11 +102,6 @@
         </div><br>
         <div class="grid">
             <figure>
-                <a href="https://1drv.ms/x/s!Arqmys7wWUqZi_VXMJwNg-pZIUE_0w?e=Q2JB0M" target="_blank"><img class="img-projects" src="./img/pricing.png" alt="Excel - Preço de Venda">
-                <figcaption>Formação Preço de Venda</figcaption>
-                <p>Planilha feita no Excel, para formação de preço de venda a partir do custo da mercadoria, considerando despesas fixas, variáveis e lucro. Simule seu preço agora.</p></a>
-            </figure>
-            <figure>
                 <a href="https://public.tableau.com/views/Covid19_15900350276550/DashBoard?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
                 <figcaption>Linha do Tempo COVID-19</figcaption>
                 <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo. A curva de contaminação é impressionante, cuide-se! </p></a>
@@ -115,6 +110,21 @@
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
             <figcaption>Números Totais Covid-19</figcaption>
             <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos para se informar.</p></a>
+            </figure>
+            <figure>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
+                <figcaption>Variação Dólar 2000 a 2018</figcaption>
+                <p>Dashboard feito no Power BI, gráficos interativos,analisando variação do dólar de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
+            </figure>
+            <figure>
+                <a href="https://1drv.ms/x/s!Arqmys7wWUqZi_VXMJwNg-pZIUE_0w?e=Q2JB0M" target="_blank"><img class="img-projects" src="./img/pricing.png" alt="Excel - Preço de Venda">
+                <figcaption>Formação Preço de Venda</figcaption>
+                <p>Planilha feita no Excel, para formação de preço de venda a partir do custo da mercadoria, considerando despesas fixas, variáveis e lucro. Simule seu preço agora.</p></a>
+            </figure>
+            <figure>
+                <a href="https://1drv.ms/x/s!Arqmys7wWUqZjIh7KFHEPm8o0Zgnlw?e=5v0oFI" target="_blank"><img class="img-projects" src="./img/exceldashfat.png" alt="Excel - Faturamento">
+                <figcaption>Painel Gerencial</figcaption>
+                <p>Dashboard feito no Excel, com índices gerenciais. A visualização online perde algumas funcionalidades, mas você pode baixa-la no meu github para melhor leitura :)</p></a>
             </figure>
             <figure>
                 <a href="https://www.linkedin.com/posts/ivanmonma_treinamento-diferencial-de-al%C3%ADquotas-icms-activity-6666551712637042688-7cO1" target="_blank"><img class="img-projects" src="./img/difal.png" alt="Treinamentos">
@@ -132,11 +142,6 @@
                 <a href="https://www.sap.com/brazil/products/business-one.html" target="_blank"><img class="img-projects" src="./img/sapb1.png" alt=">SAP Business One">
                 <figcaption>SAP Business One</figcaption>
                 <p>Gerente de implantação do ERP SAP Business One na empresa Ace Revestimentos (maior revendedora de revestimentos vinílicos da América Lanita).</p></a>
-            </figure>
-            <figure>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
-                <figcaption>Variação Dólar 2000 a 2018</figcaption>
-                <p>Dashboard feito no Power BI, gráficos interativos,analisando variação do dólar de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
             </figure>
         </div>
     </section>
