Inclusão projeto Imersao PBI

--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
                 <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo. A curva de contaminação é impressionante, cuide-se! </p></a>
             </figure>
             <figure>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
-            <figcaption>Números Totais Covid-19</figcaption>
-            <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos para se informar.</p></a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNDZiMWNhZTAtMWZlZS00YjgyLWE4NTAtYWIyZjM3ZTQyZWQyIiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/imersaopbi.png" alt="Imersao PBI">
+            <figcaption>Desafio Consultoria Excelência</figcaption>
+            <p>Dashboard feito no Power BI, no desafio da Imersão PBI com Luis Gustavo. Fiquei muito feliz com o resultado, veja e me diga o que achou. </p></a>
+            </figure>
+            <figure>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzBhZjM4MmQtNzljYi00MzMwLTg2NDktNGNmNDVjMzNlODU4IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/covid.png" alt="Dashboard">
+                <figcaption>Números Totais Covid-19</figcaption>
+                <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos para se informar.</p></a>
             </figure>
             <figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
