Inclusão Projeto YouTube

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
         </div><br>
         <div class="grid">
             <figure>
+                <a href="https://youtu.be/6f4Zz6rQO-Q"
+                target="_blank"><img class="img-projects" src="./img/youtube.png" alt=">Tableau Covid-19">
+                <figcaption>SAP x Power BI</figcaption>
+                <p>Nesse vídeo mostro como fazer um gráfico de Mapa no Power BI, importando duas tabelas do SAP Business One, plotando as vendas por cidade, em menos de 10 minutos.</p></a>
+            </figure>
+            <figure>
                 <a href="https://public.tableau.com/views/Covid19_15900350276550/DashBoard?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link" target="_blank"><img class="img-projects" src="./img/tableau_covid.png" alt=">Tableau Covid-19">
                 <figcaption>Linha do Tempo COVID-19</figcaption>
                 <p>Dashboard feito no Tableau, interativo, com linha do tempo mostrando o crescimento dos números no mundo. A curva de contaminação é impressionante, cuide-se! </p></a>
@@ -116,11 +122,11 @@
                 <figcaption>Números Totais Covid-19</figcaption>
                 <p>Dashboard feito no Power BI, com filtros por Continente, números totais por país, atualizado diariamente. Salve em seus favoritos para se informar.</p></a>
             </figure>
-            <figure>
+            <!--<figure>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODNiMDQ0MTQtNTVlMC00M2NjLTkwZTItMTA5Nzg2NjA4Mzc5IiwidCI6ImYwMzJlMzhjLTI0N2MtNDAzMS04NTAxLTU2MTNmMjJkMTY2NSJ9" target="_blank"><img class="img-projects" src="./img/powerbi.png" alt="Power BI">
                 <figcaption>Variação Dólar 2000 a 2018</figcaption>
                 <p>Dashboard feito no Power BI, gráficos interativos,analisando variação do dólar de 2000 a 2018, com dados extraídos via API do BACEN.</p></a>
-            </figure>
+            </figure>-->
             <figure>
                 <a href="https://1drv.ms/x/s!Arqmys7wWUqZi_VXMJwNg-pZIUE_0w?e=Q2JB0M" target="_blank"><img class="img-projects" src="./img/pricing.png" alt="Excel - Preço de Venda">
                 <figcaption>Formação Preço de Venda</figcaption>
@@ -164,8 +170,8 @@
                         <i class="fas fa-envelope"></i>
                         <p>monma.ivan@outlook.com</p>
                     </a></li>
-                    <li><a href="https://t.me/monmaivan" target="_blank">
-                        <i class="fab fa-telegram"></i>
+                    <li><a href="https://www.youtube.com/channel/UCdB6iw-IbqNcWS8w1-5PK_w" target="_blank">
+                        <i class="fab fa-youtube"></i>
                         <p>@monmaivan</p>
                     </a></li>
                     <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5511963663646" target="_blank">
