--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         </ul>   
         <ul>
             <li><i class="fas fa-building about-icon"></i></li>
-            <!--<li><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos  (2015 - Atual)</a></li>
-            <li><a href="https://gart.com.br/gart/" target="_blank">Gart Molduras (2012 - 2014)</a></li>
-            <li><a href="https://www.sony.co.jp/" target="_blank">Sony (Japão) (2010 - 2011)</a></li>
-            <li><a href="http://www.prodent.net.br/" target="_blank">Prodent (2009 - 2010)</a></li>
-            <li><a href="http://www.leonardi.com.br/" target="_blank">Leonardi Pré-Fabricados (2008 - 2009)</a></li>
-            <li><a href="https://usetaxi.com.br/">Use Táxi (2005 - 2008)</a></li>-->
         </ul>
 
         
             <div class="timeline">
+    <div class="container right">
+        <div class="content">
+      <h3><a href="https://oficialfarma.com.br" target="_blank">Oficial Farma</a></h3>
+      <p>2020 | Atual</p>
+        </div>
+    </div>
   <div class="container left">
     <div class="content">
       <h3><a href="http://www.acerevestimentos.com.br/" target="_blank">Ace Revestimentos</a></h3>
-      <p>2015 | Atual</p>
+      <p>2015 | 2020</p>
     </div>
   </div>
   <div class="container right">
